plugins/kotlin/idea/tests/testData/gradle/multiplatform/core/tier0/kmmLibrary/src/iosMain/kotlin/kmmLibrary/iosMain_api.kt
package kmmApplication

actual class <!LINE_MARKER("descr='Has expects in project.commonMain module'")!>CommonMainExpect<!> {
    actual fun <!LINE_MARKER("descr='Has expects in project.commonMain module'")!>commonMainApi<!>() { }

    fun iosSpecificApi() { }
}
